

                                        XFLR5

                     A tool for the design of Airfoils, Wings and Planes
                          operating at low Reynolds numbers

								Copyright (C) 2003-2016

                                     Andre Deperrois


*******************************************************************************


xflr5 v6.13 January xxxth, 2016
	- changed the panel force display to q.Cp instead of q.S.panel_area; this is more significant since the arrow lengths are now mesh independent.
	- added the extra drag in the calculation of the plane's total drag coefficient
	- fixed the issue of slow display in Inverse design



xflr5 v6.12 January 9th, 2016
	- introduced an option to add extra drag to polar objects, to account for surfaces not included in the plane object
	- restored the plot and export options of the boundary layer graphs after a converged xfoil analysis
	- modified in depth the constuction of the wing geometry, to better account for flap with large deflections; has an impact on results;
	- corrected bugs in the import/export operation of body objects to xml files
	- enabled the LE points of the spline foil to be dragged in Direct Design
	- corrected a minor error in the construction of the foil's mid camber line; potential small impact on VLM results
	- corrected other minor things


xflr5 v6.11 August 8th, 2015
	- added an option to customize the target lift distribution curve in the wing's operating point view
	- added inertia data as parameters in stability analysis
	- added more display options for curve points
	- replaced the deprecated QGLWidget by the new QOpenGLWidget recommended in Qt5.4
	- added a new editor for the plane object
	- added a new editor for the body object
	- reviewed in depth the 2D rendering system to separate viewing operations from the analysis part
	- replaced the rendertext methods in OpenGL by custom implementations to improve the rendering quality